<resources>
    <string name="app_name">TvMazeClient</string>
    <string name="search">Search</string>
    <string name="content_description_portrait">Portada del show</string>
    <string name="loader_network_error">Estado de carga o error</string>
    <string name="show_portrait">Poster del show</string>
    <string name="detail_resume">Sinópsis:</string>
    <string name="detail_gender">Géneros:&#160;</string>
    <string name="detail_schedule">Horario:&#160;</string>
    <string name="detail_cast">Talentos:</string>
    <string name="go_site">Go website</string>
    <string name="schedule">Schedule</string>
    <string name="saved_shows">Saved Shows</string>
    <string name="save">Save</string>
    <string name="no_save_data">Aún no tienes elementos guardados</string>
</resources>