<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- CONTENEDOR PRINCIPAL -->
        <LinearLayout
            android:id="@+id/main_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical_detail_fragment"
            android:layout_marginHorizontal="@dimen/margin_horizontal_detail_fragment">

            <!-- CONTENEDOR SUPERIOR -->
            <LinearLayout
                android:id="@+id/top_container"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal">

                <!-- POSTER DEL SHOW -->
                <ImageView
                    android:id="@+id/iv_portrait"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.6"
                    tools:src="@tools:sample/avatars"
                    android:contentDescription="@string/show_portrait"/>

                <!-- CONTENEDOR SUPERIOR DERECHO -->
                <LinearLayout
                    android:id="@+id/top_right_container"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <!-- CONTENEDOR DE ETIQUETAS SUPERIORES -->
                    <LinearLayout
                        android:id="@+id/top_right_labels_container"
                        android:layout_marginStart="@dimen/margin_horizontal_detail_fragment"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">
                        
                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Game Shakers"
                            android:textSize="@dimen/detail_title_size"
                            android:textStyle="bold"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/tv_network_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Nickelodeon"
                            android:textSize="@dimen/detail_subtitle_size"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/tv_rating"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="rating: 5.6"
                            android:textSize="@dimen/detail_subtitle_size"
                            android:textColor="@color/black"/>
                        
                    </LinearLayout>

                    <!-- CONTENEDOR DE BOTON -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="center">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_go_site"
                            android:layout_width="@dimen/width_button"
                            android:layout_height="@dimen/height_button"
                            android:textSize="@dimen/font_size_button"
                            android:text="@string/go_site"/>
                        
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!-- CONTENEDOR INFERIOR -->
            <LinearLayout
                android:id="@+id/bottom_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_vertical_detail_fragment"
                android:orientation="vertical">
                
                <TextView
                    android:text="@string/detail_resume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/detail_section_title"/>

                <TextView
                    android:id="@+id/tv_resume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/detail_section_body"
                    tools:text="Esta es la sinópsis del show." />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/margin_vertical_detail_fragment">

                    <TextView
                        android:text="@string/detail_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/detail_section_title"/>

                    <TextView
                        android:id="@+id/tv_genders"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/detail_section_body"
                        tools:text="Comedy, Children" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/margin_vertical_detail_fragment">

                    <TextView
                        android:text="@string/detail_schedule"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/detail_section_title"/>

                    <TextView
                        android:id="@+id/tv_schedule"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/detail_section_body"
                        tools:text="00:37 | Monday, Tuesday, Wednesday, Thursday, Friday" />
                </LinearLayout>

                <TextView
                    android:layout_marginTop="@dimen/margin_vertical_detail_fragment"
                    android:text="@string/detail_cast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_section_title"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_cast"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>